# investdash

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  render.yaml  start.sh  streamlit_app.py
.streamlit/: config.toml
backend/: client.py  config.py  database.py  exceptions.py  main.py  middleware.py
backend/models/: __init__.py  chat.py  market.py  portfolio.py  trading.py
backend/routers/: chat.py  market.py  portfolio.py  trading.py
backend/services/: __init__.py  ai_engine.py  cache_service.py  market_data_service.py  portfolio_service.py  simulated_broker.py  trading_service.py
data/: portfolio_manual.json
mcp_server/: server.py
mcp_server/tools/: analysis_tools.py  market_tools.py  portfolio_tools.py  trading_tools.py
pages/: 1_Dashboard.py  2_Portfolio.py  3_AI_Chat.py  4_Trading.py  5_Research.py
