[project]
name = "investdash"
version = "5.0.0"
description = "AI-Powered Personal Investment Dashboard"
requires-python = ">=3.12"
dependencies = [
    # Core
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "loguru>=0.7",
    # Market Data
    "yfinance>=0.2.36",
    # MCP
    "mcp>=1.0.0",
    # API
    "fastapi>=0.115",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    # AI
    "anthropic>=0.40",
    # Dashboard
    "streamlit>=1.31",
    "plotly>=5.18",
    # Trading
    "alpaca-py>=0.30",
    # Macro Data
    "fredapi>=0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
]

[project.scripts]
investdash-mcp = "mcp_server.server:main"
investdash-api = "backend.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend", "mcp_server"]

[tool.ruff]
target-version = "py312"
line-length = 100
